--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-自己的网站，想怎么做就怎么做，什么选项卡，轮播图，都不是事，我就是个做网页的---程序员！！！
+<html>
+    <head>
+	     <meta charset="gbk"/>
+		 <style>
+		      body{
+			     background-image:url(0.png);
+			  }
+			  html{
+			    height:100% 100%;
+			  }
+		 </style>
+	</head>
+	<body>
+	     <h1>静夜诗</h1>
+		 <p>床前明月光</p>
+		 <p>疑是地上霜</p>
+		 <p>举头望明月</p>
+		 <p>低头思故乡</p>
+	</body>
+</html>
