--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -1,1 +1,21 @@
 
+<html>
+    <head>
+	     <meta charset="gbk"/>
+		 <style>
+		      body{
+			     background-image:url(./image.0.png);
+			  }
+			  html{
+			    height:100% 100%;
+			  }
+		 </style>
+	</head>
+	<body>
+	     <h1>静夜诗</h1>
+		 <p>床前明月光</p>
+		 <p>疑是地上霜</p>
+		 <p>举头望明月</p>
+		 <p>低头思故乡</p>
+	</body>
+</html>
