--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -4,7 +4,7 @@
 	     <meta charset="gbk"/>
 		 <style>
 		      body{
-			     background-image:url(./image.0.png);
+			     background-image:url(./image/0.png);
 			  }
 			  html{
 			    height:100% 100%;
