--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -5,6 +5,8 @@
 		 <style>
 		      body{
 			     background-image:url(./image/0.png);
+			      background-size:100% 100%;
+			      height:100%;
 			  }
 			  html{
 			    height:100% 100%;
