--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -11,6 +11,13 @@
 			  html{
 			    height:100% 100%;
 			  }
+			 @keymyfirst{
+				 from{background:black}
+				 to{background:red}
+			 }
+			 h1{
+			   animation:myfirst 5s;
+			 }
 		 </style>
 	</head>
 	<body>
