--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -11,7 +11,7 @@
 			  html{
 			    height:100% 100%;
 			  }
-			 @keymyfirst{
+			 @keyframes{
 				 from{background:black}
 				 to{background:red}
 			 }
