--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -12,8 +12,8 @@
 			    height:100% 100%;
 			  }
 			 @keyframes{
-				 from{background:black}
-				 to{background:red}
+				 from{background:red}
+				 to{background:green}
 			 }
 			 h1{
 			   animation:myfirst 5s;
