--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -3,7 +3,7 @@
 	     <meta charset="gbk"/>
 		 <style>
 		      body{
-			     background-image:url(0.png);
+			     background-image:url(./image/0.png);
 				 background-size:100% 100%;
 				 height:100%
 			  }
