--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -10,6 +10,13 @@
 			  html{
 			    height:100% 100%;
 			  }
+			  @keyframes myfirst{
+			    from {background:red;}
+				to {background:green;}
+			  }
+			  h1{
+			    animation:myfirst 5s;
+				} 
 		 </style>
 	</head>
 	<body>
