--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -11,8 +11,8 @@
 			    height:100% 100%;
 			  }
 			  @keyframes myfirst{
-			    from {background:red;}
-				to {background:green;}
+			    from {opacity:0}
+				to {opacity:100}
 			  }
 			  h1{
 			    animation:myfirst 5s;
