--- a/002Basics/test.html
+++ b/002Basics/test.html
@@ -15,7 +15,7 @@
 				to {opacity:100}
 			  }
 			  h1{
-			    animation:myfirst 5s;
+			    animation:myfirst 1s infinite;
 				} 
 		 </style>
 	</head>
